feat(sandbox): delete legacy Form A wrapper code (Phase 5b)
Phase 5b tears out the per-request bash wrapper generator and the
Form A path in the sandbox dispatcher. D-form (LeetCode/HackerRank
harness) is now the sole execution mode.

Code execution:
  - CodeExecutionHelper interface: 100 → 53 lines
    Removed: buildWrapperScript, buildBatchInputsJson,
    parseBatchResults, wrapJavaScript, wrapPython, wrapJava,
    buildInputsJson (10 method declarations).
    Kept: buildDInputsJson, buildDBatchInputsJson, parseDEnvelope,
    plus utility helpers (parseRuntimeMs, normalizeOutput,
    sanitizeSandboxOutput, extractFunctionName, emptyResult,
    buildCaseResult).
  - CodeExecutionHelperImpl: 893 → 236 lines (-657)
    Removed: 12 method bodies including the giant 950-line
    PYTHON_BATCH_WRAPPER / JAVA_BATCH_WRAPPER / JAVA_JSON_PARSER
    String-template constants, the 5 buildXxxBatchWrapper methods,
    the embedded Java JSON parser/serializer, parseBatchResults,
    the 3 wrapXxx methods, buildInputsJson, parseInputValue.
    Kept + restored: extractFunctionName + parseRuntimeMs (still
    used by the controller / other modules).

Sandbox dispatch:
  - SandboxService interface: 60 → 36 lines
    Removed: buildDockerCommand + buildBatchDockerCommand
    (Form A only; D-form composes its docker command internally).
  - SandboxServiceImpl: 679 → 320 lines (-360)
    Removed: useDForm gate, A-path bodies in executeInSandbox and
    executeBatch, buildDockerCommand, buildBatchDockerCommand.
    Kept: D-form executeInSandbox / executeBatch (now the only
    paths), materializeDFormJob, dFormDispatchShell,
    buildDDockerCommand, runDProcess with the concurrent stdout
    drainer (Phase 3.5 CR fix), DFormRunResult.

Test cleanup:
  - CodeExecutionHelperImplTest: 333 → 268 lines
    Removed 4 A-path test cases (buildPython/Java/C/Cpp batch
    wrapper decode / stripPublicModifier). Replaced with 12
    D-form-focused cases (buildDInputsJson for single + batch +
    type