@@ -7,23 +7,35 @@ import com.ulticode.modules.submission.dto.RunResultDTO;
 import com.ulticode.modules.submission.dto.RunSubmissionDTO;
 import com.ulticode.modules.submission.service.CodeExecutionHelper;
 import com.ulticode.modules.submission.service.SandboxService;
-import org.springframework.stereotype.Service;
-import lombok.extern.slf4j.Slf4j;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.stereotype.Service;
 
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
-import java.util.Base64;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.concurrent.atomic.AtomicBoolean;
 
 /**
  * Implementation of SandboxService.
- * Handles Docker sandbox lifecycle and security parameters.
- * Delegates per-language wrapper generation and result parsing to CodeExecutionHelper.
+ *
+ * <p>Phase 5b: the legacy Form A (per-request bash wrapper) path is
+ * gone. D-form (LeetCode/HackerRank harness) is the sole dispatch.
+ * The harness inside the sandbox image is responsible for compiling
+ * and running the user code; the backend's job is to:
+ * <ol>
+ *   <li>Materialize a per-run temp dir with the user code and the
+ *       per-call {@code input.json}.
+ *   <li>Spawn the docker container with the temp dir mounted
+ *       read-only at {@code /job}.
+ *   <li>Concurrently drain the container's stdout to avoid the
+ *       pipe-buffer deadlock that Phase 3 surfaced.
+ *   <li>Hand the captured envelope to {@link CodeExecutionHelper}
+ *       for verdict mapping.
+ * </ol>
  */
 @Slf4j
 @Service
@@ -44,16 +56,18 @@ public class SandboxServiceImpl implements SandboxService {
     private static final int MAX_LOG_DETAIL_BYTES = 1024;
 
     /**
+     * Cap on bytes the backend will buffer from a single sandbox invocation.
+     * 8 MiB envelope + 128 KiB safety headroom for a 100-case batch. If
+     * the harness exceeds this, the reader drops the rest and
+     * {@code runDProcess} appends a truncation marker so envelope
+     * parsing doesn't blow up downstream.
+     */
+    private static final int DFORM_OUTPUT_BUDGET_BYTES = 8 * 1024 * 1024 + 128 * 1024;
+
+    /**
      * Detects sandbox-level fork failures that are NOT caused by user code.
      * Symptoms of host/cgroup/seccomp pressure rather than user program bugs:
      * busybox sh, kernel cgroup, docker daemon, or libc fwrite all surface here.
-     *
-     * <p>Match heuristics: covers the three dominant failure surfaces observed
-     * in production (busybox sh "Cannot fork", glibc / dockerd
-     * "Resource temporarily unavailable", and seccomp OOM/fork kill).
-     *
-     * @param output merged stdout/stderr (sandbox uses {@code redirectErrorStream(true)})
-     * @return true if output strongly suggests an environmental fork failure
      */
     static boolean isSandboxForkFailure(String output) {
         if (output == null || output.isEmpty()) {
@@ -66,15 +80,6 @@ public class SandboxServiceImpl implements SandboxService {
 
     /**
      * Detects docker daemon-side fork failures surfaced as {@link IOException#getMessage()}.
-     * Stricter than {@link #isSandboxForkFailure(String)} because docker daemon messages
-     * commonly include "pids" in unrelated contexts (e.g. configuration warnings).
-     *
-     * <p>Accepts only phrases that unambiguously identify a fork failure at the
-     * daemon layer: kernel cgroup pressure, RLIMIT_NPROC exhaustion, or
-     * dockerd PID-controller refusal.
-     *
-     * @param msg docker daemon IOException message; may be null
-     * @return true if the message unambiguously indicates a fork failure
      */
     static boolean isDockerDaemonForkFailure(String msg) {
         if (msg == null || msg.isEmpty()) {
@@ -87,13 +92,6 @@ public class SandboxServiceImpl implements SandboxService {
                 || msg.contains("RLIMIT_NPROC");
     }
 
-    /**
-     * Truncates detail text for log emission to keep structured log aggregators healthy.
-     * Appends a marker so the operator can see the original length if relevant.
-     *
-     * @param detail raw detail text (may be null)
-     * @return detail unchanged if short; truncated with a length marker otherwise
-     */
     private static String truncateForLog(String detail) {
         if (detail == null) {
             return "<null>";
@@ -105,47 +103,29 @@ public class SandboxServiceImpl implements SandboxService {
                 + "... [truncated, original=" + detail.length() + " bytes]";
     }
 
+    // ── Public entry points ──────────────────────────────────────────────────
+
     @Override
     public RunResultDTO.RunCaseResult executeInSandbox(String language, String code,
                                                       RunSubmissionDTO.RunTestCase testCase,
                                                       String runId, String userId) {
-        if (useDForm(language)) {
-            return executeInSandboxD(language, code, testCase, runId, userId);
-        }
+        Path jobDir = null;
         try {
-            String inputsJson = helper.buildInputsJson(testCase);
-            List<String> command = buildDockerCommand(language, code);
-
-            DockerSandboxConfig.LanguageLimit langLimit = sandboxConfig.languages() != null
-                    ? sandboxConfig.languages().get(language)
-                    : null;
-            int effectiveTimeout = langLimit != null ? langLimit.timeoutSeconds() : sandboxConfig.timeout();
-
-            long startTime = System.nanoTime();
-            ProcessBuilder pb = new ProcessBuilder(command);
-            pb.redirectErrorStream(true);
-            Process process = pb.start();
-
-            process.getOutputStream().write(inputsJson.getBytes(StandardCharsets.UTF_8));
-            process.getOutputStream().flush();
-            process.getOutputStream().close();
-
-            boolean finished = process.waitFor(effectiveTimeout, java.util.concurrent.TimeUnit.SECONDS);
-            long elapsedMs = (System.nanoTime() - startTime) / 1_000_000;
-
-            if (!finished) {
-                process.destroyForcibly();
+            String inputJson = helper.buildDInputsJson(testCase, dFormPerCaseTimeoutMs());
+            jobDir = materializeDFormJob(language, code, inputJson, runId);
+            List<String> command = buildDDockerCommand(language, jobDir);
+            DFormRunResult run = runDProcess(command, dFormHardTimeoutSeconds(), runId);
+            long elapsedMs = run.elapsedMs();
+            String stdout = run.stdout();
+            int exitCode = run.exitCode();
+            if (run.timedOut()) {
                 return helper.buildCaseResult(testCase, runId, userId, "Time Limit Exceeded",
-                        elapsedMs, null, "Execution timed out after " + effectiveTimeout + "s", 0.0);
+                        elapsedMs, null, "D-form dispatch timed out after " + dFormHardTimeoutSeconds() + "s", 0.0);
             }
-
-            String stdout = new String(process.getInputStream().readAllBytes(), StandardCharsets.UTF_8).trim();
-            int exitCode = process.exitValue();
-
             if (exitCode != 0) {
                 if (isSandboxForkFailure(stdout)) {
-                    log.warn("Sandbox fork failure detected for language={} runId={} detail={}",
-                            language, runId, truncateForLog(helper.sanitizeSandboxOutput(stdout)));
+                    log.warn("D-form sandbox fork failure for runId={}: {}", runId,
+                            truncateForLog(helper.sanitizeSandboxOutput(stdout)));
                     return helper.buildCaseResult(testCase, runId, userId, SANDBOX_FORK_FAILURE_VERDICT,
                             elapsedMs, null,
                             SANDBOX_FORK_FAILURE_DETAIL_PREFIX + helper.sanitizeSandboxOutput(stdout), 0.0);
@@ -153,31 +133,14 @@ public class SandboxServiceImpl implements SandboxService {
                 return helper.buildCaseResult(testCase, runId, userId, "Runtime Error",
                         elapsedMs, null, helper.sanitizeSandboxOutput(stdout), 0.0);
             }
-
-            String expected = testCase.getOutput() != null ? testCase.getOutput().trim() : "";
-            boolean passed = helper.normalizeOutput(stdout).equals(helper.normalizeOutput(expected));
-
-            return helper.buildCaseResult(testCase, runId, userId,
-                    passed ? "Accepted" : "Wrong Answer",
-                    elapsedMs, stdout, null, 0.0);
-
-        } catch (InterruptedException e) {
-            Thread.currentThread().interrupt();
-            log.error("Sandbox execution interrupted for language={}", language, e);
-            throw new BusinessException(ErrorCode.SANDBOX_ERROR, "Sandbox execution interrupted");
-        } catch (IOException e) {
-            log.error("Sandbox execution I/O failed for language={}", language, e);
-            String detail = e.getMessage();
-            if (detail != null && detail.contains("Unable to find image")) {
-                throw new BusinessException(ErrorCode.SANDBOX_IMAGE_NOT_FOUND,
-                        "Sandbox image '" + sandboxConfig.image() + "' not found. Build it first: docker build -t "
-                                + sandboxConfig.image() + " -f docker/sandbox/Dockerfile docker/sandbox/");
-            }
-            if (isDockerDaemonForkFailure(detail)) {
-                throw new BusinessException(ErrorCode.SANDBOX_ERROR,
-                        "Sandbox daemon-level fork failure (likely PID/cgroup pressure): " + detail);
-            }
-            throw new BusinessException(ErrorCode.SANDBOX_ERROR, "Sandbox execution failed: " + detail);
+            List<RunResultDTO.RunCaseResult> results =
+                    helper.parseDEnvelope(stdout, List.of(testCase), runId, userId);
+            return results.isEmpty()
+                    ? helper.buildCaseResult(testCase, runId, userId, "Runtime Error",
+                            elapsedMs, null, "D-form envelope empty", 0.0)
+                    : results.get(0);
+        } finally {
+            cleanupJobDir(jobDir);
         }
     }
 
@@ -185,206 +148,45 @@ public class SandboxServiceImpl implements SandboxService {
     public List<RunResultDTO.RunCaseResult> executeBatch(String language, String code,
                                                         List<RunSubmissionDTO.RunTestCase> testCases,
                                                         String runId, String userId) {
-        if (useDForm(language)) {
-            return executeBatchD(language, code, testCases, runId, userId);
-        }
+        Path jobDir = null;
         try {
-            String testCasesJson = helper.buildBatchInputsJson(testCases);
-            String wrapperScript = helper.buildWrapperScript(language, code, testCases);
-            List<String> command = buildBatchDockerCommand(language, wrapperScript);
-
-            DockerSandboxConfig.LanguageLimit langLimit = sandboxConfig.languages() != null
-                    ? sandboxConfig.languages().get(language)
-                    : null;
-            int effectiveTimeout = langLimit != null ? langLimit.timeoutSeconds() : sandboxConfig.timeout();
-
-            long startTime = System.nanoTime();
-            ProcessBuilder pb = new ProcessBuilder(command);
-            pb.redirectErrorStream(true);
-            Process process = pb.start();
-
-            process.getOutputStream().write(testCasesJson.getBytes(StandardCharsets.UTF_8));
-            process.getOutputStream().flush();
-            process.getOutputStream().close();
-
-            boolean finished = process.waitFor(effectiveTimeout, java.util.concurrent.TimeUnit.SECONDS);
-            long elapsedMs = (System.nanoTime() - startTime) / 1_000_000;
-
-            if (!finished) {
-                process.destroyForcibly();
+            String inputJson = helper.buildDBatchInputsJson(testCases, dFormPerCaseTimeoutMs());
+            jobDir = materializeDFormJob(language, code, inputJson, runId);
+            List<String> command = buildDDockerCommand(language, jobDir);
+            DFormRunResult run = runDProcess(command, dFormHardTimeoutSeconds(), runId);
+            long elapsedMs = run.elapsedMs();
+            String stdout = run.stdout();
+            int exitCode = run.exitCode();
+            if (run.timedOut()) {
+                long perCase = elapsedMs / Math.max(testCases.size(), 1);
                 return testCases.stream()
                         .map(tc -> helper.buildCaseResult(tc, runId, userId, "Time Limit Exceeded",
-                                elapsedMs / testCases.size(), null,
-                                "Batch execution timed out after " + effectiveTimeout + "s", 0.0))
-                        .collect(Collectors.toList());
+                                perCase, null,
+                                "D-form batch dispatch timed out after " + dFormHardTimeoutSeconds() + "s", 0.0))
+                        .toList();
             }
-
-            String stdout = new String(process.getInputStream().readAllBytes(), StandardCharsets.UTF_8).trim();
-            int exitCode = process.exitValue();
-
             if (exitCode != 0) {
                 if (isSandboxForkFailure(stdout)) {
-                    log.warn("Sandbox fork failure detected in batch for language={} runId={} cases={} detail={}",
-                            language, runId, testCases.size(),
-                            truncateForLog(helper.sanitizeSandboxOutput(stdout)));
+                    long perCase = elapsedMs / Math.max(testCases.size(), 1);
                     return testCases.stream()
                             .map(tc -> helper.buildCaseResult(tc, runId, userId, SANDBOX_FORK_FAILURE_VERDICT,
-                                    elapsedMs / testCases.size(), null,
+                                    perCase, null,
                                     SANDBOX_FORK_FAILURE_DETAIL_PREFIX + helper.sanitizeSandboxOutput(stdout), 0.0))
-                            .collect(Collectors.toList());
+                            .toList();
                 }
+                long perCase = elapsedMs / Math.max(testCases.size(), 1);
                 return testCases.stream()
                         .map(tc -> helper.buildCaseResult(tc, runId, userId, "Runtime Error",
-                                elapsedMs / testCases.size(), null, helper.sanitizeSandboxOutput(stdout), 0.0))
-                        .collect(Collectors.toList());
+                                perCase, null, helper.sanitizeSandboxOutput(stdout), 0.0))
+                        .toList();
             }
-
-            return helper.parseBatchResults(stdout, testCases, runId, userId);
-
-        } catch (InterruptedException e) {
-            Thread.currentThread().interrupt();
-            throw new BusinessException(ErrorCode.SANDBOX_ERROR, "Batch execution interrupted");
-        } catch (IOException e) {
-            String msg = e.getMessage() != null ? e.getMessage() : "";
-            if (isDockerDaemonForkFailure(msg)) {
-                throw new BusinessException(ErrorCode.SANDBOX_ERROR,
-                        "Sandbox daemon-level fork failure (likely PID/cgroup pressure): " + msg);
-            }
-            throw new BusinessException(ErrorCode.SANDBOX_ERROR, "Batch execution failed: " + msg);
+            return helper.parseDEnvelope(stdout, testCases, runId, userId);
+        } finally {
+            cleanupJobDir(jobDir);
         }
     }
 
-    @Override
-    public List<String> buildDockerCommand(String language, String code) {
-        DockerSandboxConfig.LanguageLimit langLimit = sandboxConfig.languages() != null
-                ? sandboxConfig.languages().get(language)
-                : null;
-        String effectiveMemory = langLimit != null ? langLimit.memory() : sandboxConfig.memory();
-        int effectiveTimeout = langLimit != null ? langLimit.timeoutSeconds() : sandboxConfig.timeout();
-
-        // SECURITY INVARIANT (H1 review): `--cap-drop ALL` and `--user 1000:1000` MUST stay in this
-        // list. They are the ONLY line of defense against multi-flag clone() bypass
-        // (e.g. clone(CLONE_NEWNS|CLONE_NEWPID)) because Docker 29.x + libseccomp cannot
-        // express OR-semantics for clone() via SCMP_CMP_MASKED_EQ (see seccomp-profile.json
-        // _comments). CAP_SYS_ADMIN absence (from --cap-drop ALL) is what blocks kernel-side
-        // namespace creation; SandboxForkE2EIT.multiFlag_clone_isBlockedByCapabilityGate
-        // guards this dependency. Removing these flags silently re-enables namespace creation.
-        List<String> cmd = new ArrayList<>(List.of(
-                "docker", "run", "--rm", "-i",
-                "--network", "none",
-                "--cap-drop", "ALL",
-                "--memory", effectiveMemory,
-                "--cpus", sandboxConfig.cpus(),
-                "--pids-limit", String.valueOf(sandboxConfig.pidsLimit()),
-                "--ulimit", "nofile=128:128",
-                "--tmpfs", "/tmp:rw,exec,size=64m",
-                "--read-only",
-                "--user", "1000:1000",
-                "--security-opt", "no-new-privileges:true",
-                "--security-opt", "seccomp=" + resolveSeccompProfileFilePath(),
-                "--volume", resolveSeccompProfileDirectoryPath() + ":/seccomp-profile:ro",
-                sandboxConfig.image()
-        ));
-
-        switch (language) {
-            case "javascript" -> cmd.addAll(List.of("node", "-e", helper.wrapJavaScript(code)));
-            case "python" -> cmd.addAll(List.of("python3", "-c", helper.wrapPython(code)));
-            case "java" -> {
-                String wrapped = helper.wrapJava(code);
-                String b64 = Base64.getEncoder().encodeToString(wrapped.getBytes(StandardCharsets.UTF_8));
-                cmd.addAll(List.of("sh", "-c",
-                        "echo '" + b64 + "' | base64 -d > /tmp/Main.java && javac /tmp/Main.java && java -cp /tmp Main"));
-            }
-            case "c" -> cmd.addAll(List.of("sh", "-c",
-                    "cat > /tmp/solution.c && gcc -o /tmp/solution /tmp/solution.c && /tmp/solution"));
-            case "cpp" -> cmd.addAll(List.of("sh", "-c",
-                    "cat > /tmp/solution.cpp && g++ -o /tmp/solution /tmp/solution.cpp && /tmp/solution"));
-            default -> throw new BusinessException(ErrorCode.SUBMISSION_LANGUAGE_UNSUPPORTED);
-        }
-        return cmd;
-    }
-
-    @Override
-    public List<String> buildBatchDockerCommand(String language, String wrapperScript) {
-        DockerSandboxConfig.LanguageLimit langLimit = sandboxConfig.languages() != null
-                ? sandboxConfig.languages().get(language)
-                : null;
-        String effectiveMemory = langLimit != null ? langLimit.memory() : sandboxConfig.memory();
-
-        List<String> cmd = new ArrayList<>(List.of(
-                "docker", "run", "--rm", "-i",
-                "--network", "none",
-                "--cap-drop", "ALL",
-                "--memory", effectiveMemory,
-                "--cpus", sandboxConfig.cpus(),
-                "--pids-limit", String.valueOf(sandboxConfig.pidsLimit()),
-                "--ulimit", "nofile=128:128",
-                "--tmpfs", "/tmp:rw,exec,size=64m",
-                "--read-only",
-                "--user", "1000:1000",
-                "--security-opt", "no-new-privileges:true",
-                "--security-opt", "seccomp=" + resolveSeccompProfileFilePath(),
-                "--volume", resolveSeccompProfileDirectoryPath() + ":/seccomp-profile:ro",
-                sandboxConfig.image()
-        ));
-
-        switch (language) {
-            case "javascript" -> cmd.addAll(List.of("node", "-e", wrapperScript));
-            case "python" -> cmd.addAll(List.of("python3", "-c", wrapperScript));
-            case "java", "c", "cpp" -> cmd.addAll(List.of("sh", "-c", wrapperScript));
-            default -> throw new BusinessException(ErrorCode.SUBMISSION_LANGUAGE_UNSUPPORTED);
-        }
-        return cmd;
-    }
-
-    private String resolveSeccompProfileFilePath() {
-        String path = sandboxConfig.seccompProfilePath();
-        if (path != null && !path.isBlank()) {
-            Path configuredPath = resolvePathFromWorkingTree(Path.of(path));
-            if (Files.isDirectory(configuredPath)) {
-                return configuredPath.resolve("seccomp-profile.json").toString();
-            }
-            return configuredPath.toString();
-        }
-        return resolvePathFromWorkingTree(Path.of("docker", "sandbox", "seccomp-profile.json")).toString();
-    }
-
-    private String resolveSeccompProfileDirectoryPath() {
-        Path filePath = Path.of(resolveSeccompProfileFilePath());
-        Path parent = filePath.getParent();
-        return parent != null ? parent.toString() : filePath.toString();
-    }
-
-    private Path resolvePathFromWorkingTree(Path candidate) {
-        if (candidate.isAbsolute()) {
-            return candidate;
-        }
-        String cwd = System.getProperty("user.dir");
-        Path cwdCandidate = Path.of(cwd).resolve(candidate).normalize();
-        if (Files.exists(cwdCandidate)) {
-            return cwdCandidate;
-        }
-        Path parent = Path.of(cwd).getParent();
-        if (parent != null) {
-            Path parentCandidate = parent.resolve(candidate).normalize();
-            if (Files.exists(parentCandidate)) {
-                return parentCandidate;
-            }
-        }
-        return cwdCandidate;
-    }
-
-    // ── D-form dispatch (LeetCode/HackerRank harness) ────────────────────────
-    // The legacy executeInSandbox / executeBatch above builds a per-request
-    // bash wrapper via helper.buildWrapperScript. D-form instead pre-compiles
-    // the harness into the sandbox image (docker/sandbox/Dockerfile Phase 2
-    // build) and ships a static input.json. These methods are the dispatcher.
-
-    /** Gate the D-form path. Both the global flag and the language support set must agree. */
-    private boolean useDForm(String language) {
-        return sandboxConfig.dFormEnabled()
-                && CodeExecutionHelper.DFORM_SUPPORTED_LANGUAGES.contains(language);
-    }
+    // ── D-form dispatch internals ────────────────────────────────────────────
 
     /** Maps a language to the file name the harness expects in /job/. */
     private static String dFormSolutionFileName(String language) {
@@ -422,15 +224,23 @@ public class SandboxServiceImpl implements SandboxService {
         }
     }
 
-    /** Hard timeout the docker container's wall clock. Soft TLE is per-case inside the harness. */
+    /** Per-case soft timeout forwarded to the harness (Thread.interrupt inside the worker). */
+    private long dFormPerCaseTimeoutMs() {
+        // Conservative default: 1s. Tunable via a future
+        // code-execution.sandbox.d-form config field if/when needed.
+        return 1_000L;
+    }
+
+    /**
+     * Hard timeout the docker container's wall clock. Per-language
+     * budgets win when set; otherwise fall back to the Java budget
+     * (typically the longest) or the global default.
+     */
     private int dFormHardTimeoutSeconds() {
         DockerSandboxConfig.LanguageLimit langLimit = sandboxConfig.languages() != null
                 ? sandboxConfig.languages().get("dform")
                 : null;
         if (langLimit != null) return langLimit.timeoutSeconds();
-        // Fall back to Java's per-language budget (typically the longest). D-form's
-        // hard kill is process-level; a per-case TLE will be reported by the
-        // harness before this fires.
         DockerSandboxConfig.LanguageLimit javaLimit = sandboxConfig.languages() != null
                 ? sandboxConfig.languages().get("java")
                 : null;
@@ -438,20 +248,15 @@ public class SandboxServiceImpl implements SandboxService {
         return sandboxConfig.timeout();
     }
 
-    /** Per-case soft timeout forwarded to the harness (Thread.interrupt inside the worker). */
-    private long dFormPerCaseTimeoutMs() {
-        // Conservative default: 1s. Tunable via a future code-execution.sandbox.d-form
-        // config field if/when needed.
-        return 1_000L;
-    }
-
-    /** Per-language `sh -c` body that compiles + runs the user code via the pre-compiled harness.
+    /**
+     * Per-language {@code sh -c} body that compiles + runs the user code
+     * via the pre-compiled harness.
      *
-     * <p>CR fix: Java previously used {@code javac -d .} from inside the
-     * {@code :ro} mount of {@code /job}, which deterministically failed at
-     * write time. Compilation now targets a per-run tmpfs path that the
-     * docker command pre-creates as writable, and the runtime classpath
-     * reads from that same path.
+     * <p>CR fix (Phase 3.5 #1): Java previously used {@code javac -d .}
+     * from inside the {@code :ro} mount of {@code /job}, which
+     * deterministically failed at write time. Compilation now targets
+     * a per-run tmpfs path that the docker command pre-creates as
+     * writable, and the runtime classpath reads from that same path.
      */
     private String dFormDispatchShell(String language, String harnessRoot) {
         return switch (language) {
@@ -492,96 +297,6 @@ public class SandboxServiceImpl implements SandboxService {
         ));
     }
 
-    /** Single-case D-form dispatch. */
-    private RunResultDTO.RunCaseResult executeInSandboxD(String language, String code,
-                                                        RunSubmissionDTO.RunTestCase testCase,
-                                                        String runId, String userId) {
-        Path jobDir = null;
-        try {
-            String inputJson = helper.buildDInputsJson(testCase, dFormPerCaseTimeoutMs());
-            jobDir = materializeDFormJob(language, code, inputJson, runId);
-            List<String> command = buildDDockerCommand(language, jobDir);
-            DFormRunResult run = runDProcess(command, dFormHardTimeoutSeconds(), runId);
-            long elapsedMs = run.elapsedMs();
-            String stdout = run.stdout();
-            int exitCode = run.exitCode();
-            if (run.timedOut()) {
-                return helper.buildCaseResult(testCase, runId, userId, "Time Limit Exceeded",
-                        elapsedMs, null, "D-form dispatch timed out after " + dFormHardTimeoutSeconds() + "s", 0.0);
-            }
-            if (exitCode != 0) {
-                if (isSandboxForkFailure(stdout)) {
-                    log.warn("D-form sandbox fork failure for runId={}: {}", runId,
-                            truncateForLog(helper.sanitizeSandboxOutput(stdout)));
-                    return helper.buildCaseResult(testCase, runId, userId, SANDBOX_FORK_FAILURE_VERDICT,
-                            elapsedMs, null,
-                            SANDBOX_FORK_FAILURE_DETAIL_PREFIX + helper.sanitizeSandboxOutput(stdout), 0.0);
-                }
-                return helper.buildCaseResult(testCase, runId, userId, "Runtime Error",
-                        elapsedMs, null, helper.sanitizeSandboxOutput(stdout), 0.0);
-            }
-            List<RunResultDTO.RunCaseResult> results =
-                    helper.parseDEnvelope(stdout, java.util.List.of(testCase), runId, userId);
-            return results.isEmpty()
-                    ? helper.buildCaseResult(testCase, runId, userId, "Runtime Error",
-                            elapsedMs, null, "D-form envelope empty", 0.0)
-                    : results.get(0);
-        } finally {
-            if (jobDir != null) {
-                try {
-                    Files.walk(jobDir)
-                            .sorted(java.util.Comparator.reverseOrder())
-                            .forEach(p -> { try { Files.deleteIfExists(p); } catch (IOException ignored) {} });
-                } catch (IOException ignored) { /* best-effort cleanup */ }
-            }
-        }
-    }
-
-    /** Multi-case D-form dispatch. */
-    private List<RunResultDTO.RunCaseResult> executeBatchD(String language, String code,
-                                                           List<RunSubmissionDTO.RunTestCase> testCases,
-                                                           String runId, String userId) {
-        Path jobDir = null;
-        try {
-            String inputJson = helper.buildDBatchInputsJson(testCases, dFormPerCaseTimeoutMs());
-            jobDir = materializeDFormJob(language, code, inputJson, runId);
-            List<String> command = buildDDockerCommand(language, jobDir);
-            DFormRunResult run = runDProcess(command, dFormHardTimeoutSeconds(), runId);
-            long elapsedMs = run.elapsedMs();
-            String stdout = run.stdout();
-            int exitCode = run.exitCode();
-            if (run.timedOut()) {
-                return testCases.stream()
-                        .map(tc -> helper.buildCaseResult(tc, runId, userId, "Time Limit Exceeded",
-                                elapsedMs / testCases.size(), null,
-                                "D-form batch dispatch timed out after " + dFormHardTimeoutSeconds() + "s", 0.0))
-                        .collect(Collectors.toList());
-            }
-            if (exitCode != 0) {
-                if (isSandboxForkFailure(stdout)) {
-                    return testCases.stream()
-                            .map(tc -> helper.buildCaseResult(tc, runId, userId, SANDBOX_FORK_FAILURE_VERDICT,
-                                    elapsedMs / testCases.size(), null,
-                                    SANDBOX_FORK_FAILURE_DETAIL_PREFIX + helper.sanitizeSandboxOutput(stdout), 0.0))
-                            .collect(Collectors.toList());
-                }
-                return testCases.stream()
-                        .map(tc -> helper.buildCaseResult(tc, runId, userId, "Runtime Error",
-                                elapsedMs / testCases.size(), null, helper.sanitizeSandboxOutput(stdout), 0.0))
-                        .collect(Collectors.toList());
-            }
-            return helper.parseDEnvelope(stdout, testCases, runId, userId);
-        } finally {
-            if (jobDir != null) {
-                try {
-                    Files.walk(jobDir)
-                            .sorted(java.util.Comparator.reverseOrder())
-                            .forEach(p -> { try { Files.deleteIfExists(p); } catch (IOException ignored) {} });
-                } catch (IOException ignored) { /* best-effort cleanup */ }
-            }
-        }
-    }
-
     /**
      * Run a docker command with a concurrent stdout drainer.
      *
@@ -599,7 +314,7 @@ public class SandboxServiceImpl implements SandboxService {
         try {
             Process process = pb.start();
             java.io.ByteArrayOutputStream buf = new java.io.ByteArrayOutputStream();
-            java.util.concurrent.atomic.AtomicBoolean overBudget = new java.util.concurrent.atomic.AtomicBoolean(false);
+            AtomicBoolean overBudget = new AtomicBoolean(false);
             Thread reader = new Thread(() -> {
                 try (java.io.InputStream in = process.getInputStream()) {
                     byte[] chunk = new byte[8192];
@@ -665,14 +380,51 @@ public class SandboxServiceImpl implements SandboxService {
         }
     }
 
-    /**
-     * Cap on bytes the backend will buffer from a single sandbox invocation.
-     * 8 MiB envelope + 64 KiB per-case user_stdout safety headroom for a
-     * batch with 100 cases. If the harness exceeds this, the reader drops
-     * the rest and {@code runDProcess} appends a truncation marker so
-     * envelope parsing doesn't blow up downstream.
-     */
-    private static final int DFORM_OUTPUT_BUDGET_BYTES = 8 * 1024 * 1024 + 128 * 1024;
+    private void cleanupJobDir(Path jobDir) {
+        if (jobDir == null) return;
+        try {
+            Files.walk(jobDir)
+                    .sorted(java.util.Comparator.reverseOrder())
+                    .forEach(p -> { try { Files.deleteIfExists(p); } catch (IOException ignored) {} });
+        } catch (IOException ignored) { /* best-effort cleanup */ }
+    }
+
+    private String resolveSeccompProfileFilePath() {
+        String path = sandboxConfig.seccompProfilePath();
+        if (path != null && !path.isBlank()) {
+            Path configuredPath = resolvePathFromWorkingTree(Path.of(path));
+            if (Files.isDirectory(configuredPath)) {
+                return configuredPath.resolve("seccomp-profile.json").toString();
+            }
+            return configuredPath.toString();
+        }
+        return resolvePathFromWorkingTree(Path.of("docker", "sandbox", "seccomp-profile.json")).toString();
+    }
+
+    private String resolveSeccompProfileDirectoryPath() {
+        Path filePath = Path.of(resolveSeccompProfileFilePath());
+        Path parent = filePath.getParent();
+        return parent != null ? parent.toString() : filePath.toString();
+    }
+
+    private Path resolvePathFromWorkingTree(Path candidate) {
+        if (candidate.isAbsolute()) {
+            return candidate;
+        }
+        String cwd = System.getProperty("user.dir");
+        Path cwdCandidate = Path.of(cwd).resolve(candidate).normalize();
+        if (Files.exists(cwdCandidate)) {
+            return cwdCandidate;
+        }
+        Path parent = Path.of(cwd).getParent();
+        if (parent != null) {
+            Path parentCandidate = parent.resolve(candidate).normalize();
+            if (Files.exists(parentCandidate)) {
+                return parentCandidate;
+            }
+        }
+        return cwdCandidate;
+    }
 
     /** Minimal record bundling the result of a {@link #runDProcess} call. */
     private record DFormRunResult(boolean timedOut, long elapsedMs, String stdout, int exitCode) {}
